DesignProject/tests/error/error02_missing_brace.src
// Error test: Missing closing brace in class declaration
// Expected: Syntax error - missing closing brace

class Test {
  public attribute x : integer;
  public func foo() => integer;

